--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,19 @@
+# Core Streamlit and Data Handling
 streamlit>=1.28.0
-pandas>=1.5.0
-numpy>=1.21.0
-plotly>=5.13.0
+pandas>=2.0.0
+numpy>=1.24.0
+
+# Visualization
+matplotlib>=3.7.0
+seaborn>=0.12.0
+altair>=5.0.0
+plotly>=5.15.0
+
+# AI/ML Libraries
+scikit-learn>=1.3.0
+scipy>=1.10.0
+joblib>=1.3.0
+
+# Utilities
+python-dateutil>=2.8.0
+pytz>=2023.0
